The user can now sign in by using websockets

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,14 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Contact
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
-</ion-content>
+  
+    <ion-navbar color="danger">
+      <ion-title>Logga ut</ion-title>
+    </ion-navbar>
+  
+  </ion-header>
+  
+  
+  <ion-content padding>
+    <h5>Detta medför att du måste logga in nästa gång du öppnar applikationen</h5>
+    <button ion-button round color="danger" (click)="this.signOut()" id="SignOutButton">Logga ut</button>
+  </ion-content>
+  
