--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,13 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
-</ion-tabs>
+<ng-container *ngIf="loggedInOrNot">
+  <ion-tabs>
+      <ion-tab [root]="tab1Root" tabTitle="Hem" tabIcon="chatbubbles"></ion-tab>
+      <ion-tab [root]="tab2Root" tabTitle="Tvätt" tabIcon="calendar"></ion-tab>
+      <ion-tab [root]="tab3Root" tabTitle="Logga ut" tabIcon="backspace"></ion-tab>
+  </ion-tabs>
+</ng-container>
+<ng-container *ngIf="!loggedInOrNot">
+  <ion-tabs>
+      <ion-tab [root]="tab4Root" tabTitle="Login" tabIcon="ionic"></ion-tab>
+      <ion-tab [root]="tab5Root" tabTitle="Registrera" tabIcon="create"></ion-tab>
+  </ion-tabs>
+</ng-container>
