--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,14 +5,15 @@
   </ion-navbar>
 </ion-header>
 
-
-
   <ion-content>
-      <ion-list *ngFor="let item of messages" id="messageList"> 
+    <div id="messageList">
+      <ion-list *ngFor="let item of messages" > 
               <ion-item>
-              <p>{{username}}: {{item}}</p>
+              <p>{{item.messageUsername}}:</p>
+              <p>{{item.messageToEveryone}}</p> 
               </ion-item>
       </ion-list>
+    </div>
       <div id="sendAndMessage">
           <ion-input id="messageText" type="text" placeholder="Meddelande" [(ngModel)]="message"></ion-input>
           <button id="messageSendButton" ion-button color="light" (click)="this.submitMessage()">Skicka</button>
