--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="loggedInOrNot">
   <ion-tabs>
-      <ion-tab [root]="tab1Root" tabTitle="Hem" tabIcon="chatbubbles"></ion-tab>
-      <ion-tab [root]="tab2Root" tabTitle="Tvätt" tabIcon="calendar"></ion-tab>
+      <ion-tab [root]="tab1Root" tabTitle="Chatt" tabIcon="chatbubbles"></ion-tab>
+      <ion-tab [root]="tab2Root" tabTitle="Inställningar" tabIcon="calendar"></ion-tab>
       <ion-tab [root]="tab3Root" tabTitle="Logga ut" tabIcon="backspace"></ion-tab>
   </ion-tabs>
 </ng-container>
