Changed color for the registration page

--- a/src/pages/register-user/register-user.html
+++ b/src/pages/register-user/register-user.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color="secondary">
     <ion-title>Registrera</ion-title>
   </ion-navbar>
 </ion-header>
@@ -16,5 +16,5 @@
     <ion-label floating>Password</ion-label>
     <ion-input type="password" [(ngModel)]="password"></ion-input>
   </ion-item>
-  <button ion-button round (click)="this.handleSubmit()" id="LogInButton">Registrera</button>
+  <button ion-button round color="secondary" (click)="this.handleSubmit()" id="LogInButton">Registrera</button>
 </ion-content>
