I can now view all sockets that are connected. This is becuase i want to keep track of what users that are online. Will add an array that will be returned with all usernames instead of the socket id

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="loggedInOrNot">
   <ion-tabs>
       <ion-tab [root]="tab1Root" tabTitle="Chatt" tabIcon="chatbubbles"></ion-tab>
+      <ion-tab [root]="tabs6Root" tabTitle="Online" tabIcon="body"></ion-tab>
       <ion-tab [root]="tab2Root" tabTitle="Inställningar" tabIcon="calendar"></ion-tab>
       <ion-tab [root]="tab3Root" tabTitle="Logga ut" tabIcon="backspace"></ion-tab>
   </ion-tabs>
