Fixed so both id and username are displayed from the server. I will now begin to add the possibility for the user to messeage a specific user

--- a/src/pages/online-users/online-users.html
+++ b/src/pages/online-users/online-users.html
@@ -10,7 +10,7 @@
 <ion-content padding>
   <ion-list *ngFor="let item of onlineUsers" > 
     <ion-item>
-      <p>Användare: {{item}}</p>
+      <p>Användare: {{item.userName}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
